# hyprnote

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitmodules  .taurignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PRIVACY.md  README.md  Taskfile.yaml  bacon.toml  bun.lockb  docker-compose.yaml  dprint.json  fly.toml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tailwind.config.js
.cargo/: config.toml
apps/proxy/: Cargo.toml
apps/proxy/src/: main.rs
apps/restate/: Cargo.toml
apps/restate/src/: checkout_service.rs  main.rs  nango_service.rs
apps/server/: Cargo.toml  build.rs
apps/server/migrations/: 20241224222514_init.sql
apps/server/src/: analytics.rs  auth.rs  enhance.rs  main.rs  state.rs  transcribe.rs
apps/server/src/native/: enhance.rs  mod.rs  openai.rs  transcribe.rs
apps/server/src/stripe/: extractor.rs  mod.rs
apps/server/src/web/: connect.rs
crates/aec/: .gitignore  Cargo.toml
crates/aec/benches/: aec_bench.rs
crates/aec/data/: README.md  model_128_1.onnx
crates/aec/src/: error.rs  lib.rs  model.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: error.rs  lib.rs
crates/apple-calendar/: Cargo.toml  build.rs
crates/apple-calendar/src/: lib.rs
crates/apple-calendar/swift-lib/: Package.swift
crates/apple-calendar/swift-lib/src/: lib.swift
crates/audio/: Cargo.toml
crates/audio-macos/: Cargo.toml  build.rs
crates/audio-macos/src/: lib.rs
crates/audio-macos/swift-lib/: Package.resolved  Package.swift
crates/audio-macos/swift-lib/src/: queue.swift  state.swift  utils.swift
crates/audio/src/: errors.rs  format.rs  lib.rs  macos.rs  mic.rs  mixer.rs  norm.rs  processing.rs  silence.rs  source.rs  stream.rs
crates/audio/src/capture/: macos.rs
crates/audio/src/speaker/: macos.rs  mod.rs  windows.rs
crates/aws-transcribe/: Cargo.toml
crates/aws-transcribe/src/: lib.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: enhance.rs  lib.rs  live_summary.rs  summarize_transcript.rs  timeline.rs  transcribe.rs  types.rs
crates/bridge/src/websocket/: diarize.rs  listen.rs  mod.rs  transcribe.rs
crates/calendar/: Cargo.toml
crates/calendar-apple/: Cargo.toml
crates/calendar-apple/src/: lib.rs
crates/calendar/src/: apple.rs  google.rs  lib.rs  outlook.rs
crates/chunker/: Cargo.toml
crates/chunker/src/: error.rs  fixed.rs  lib.rs  predictor.rs  stream.rs  vad.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: create.rs  list.rs
crates/cloud/: Cargo.toml
crates/cloud/src/: lib.rs
crates/clova/: Cargo.toml  build.rs
crates/clova/proto/: nest.proto
crates/clova/src/: com.nbp.cdncp.nest.grpc.proto.v1.rs  errors.rs  handle.rs  interface.rs  lib.rs
crates/clova/src/interface/: mod.rs  types.rs
crates/db/: Cargo.toml
crates/db-admin/: Cargo.toml
crates/db-admin/src/: accounts_migration.sql  accounts_ops.rs  billings_migration.sql  billings_ops.rs  devices_ops.rs  devices_types.rs  integrations_migration.sql  integrations_ops.rs  integrations_types.rs  lib.rs  seed.rs  users_migration.sql  users_ops.rs
crates/db-client/: Cargo.toml
crates/db-script/: Cargo.toml
crates/db-script/src/: lib.rs
crates/db-user/: Cargo.toml  build.rs
crates/db-user/assets/: editor-basics.md  keyboard-shortcuts.md  manual.md  onboarding-enhanced.html  onboarding-enhanced.md  onboarding-raw.html  onboarding.md  onboarding.processed.json  onboarding.raw.json  thank-you.md
crates/db-user/src/: calendars_migration_1.sql  calendars_ops.rs  calendars_types.rs  chat_groups_migration_1.sql  chat_groups_ops.rs  chat_groups_types.rs  chat_messages_migration.sql  chat_messages_ops.rs  config_ops.rs  config_types.rs  configs_migration.sql  event_participants_migration.sql  events_migration.sql  events_migration_1.sql  events_ops.rs  events_types.rs  extension_mappings_migration.sql  extensions_ops.rs  extensions_types.rs  humans_ops.rs  humans_types.rs  init.rs  lib.rs  organizations_ops.rs  organizations_types.rs  seed.rs  session_participants_migration.sql  session_participants_migration_1.sql  sessions_migration.sql  sessions_migration_1.sql  sessions_migration_2.sql  sessions_migration_3.sql  sessions_migration_4.sql  sessions_ops.rs  sessions_types.rs  tag_sessions_migration.sql  tags_migration.sql  tags_ops.rs  tags_types.rs  templates_migration.sql  (+2 more)
crates/db/migrations/: 20241213001503_initial.down.sql  20241213001503_initial.up.sql  20241213001503_v0.up.sql
crates/db/src/: deserialize.rs  lib.rs  ops.rs  types.rs
crates/detect/: Cargo.toml
crates/detect/src/: lib.rs  macos.rs  main.rs  utils.rs
crates/diarizer/: Cargo.toml
crates/diarizer/data/: README.md
crates/diarizer/src/: lib.rs  math.rs
crates/diart/: Cargo.toml
crates/diart/src/: lib.rs
crates/file/: Cargo.toml
crates/file/src/: lib.rs  local.rs  remote.rs  types.rs
crates/gbnf/: Cargo.toml
crates/gbnf/assets/: enhance-auto.gbnf  enhance-hypr.gbnf  enhance-other.gbnf  enhance-template.gbnf  tags.gbnf  title.gbnf
crates/gbnf/src/: lib.rs
owhisper/: Cargo.toml  README.md  config.docker.example.json  config.example.json  schema.json
owhisper/owhisper-cli/: Cargo.toml
owhisper/owhisper-cli/src/: main.rs
owhisper/owhisper-client/: Cargo.toml
owhisper/owhisper-client/src/: lib.rs
owhisper/owhisper-config/: Cargo.toml
owhisper/owhisper-config/examples/: cli.json  cli.yaml  docker.json
owhisper/owhisper-config/src/: error.rs  lib.rs
owhisper/owhisper-interface/: Cargo.toml
owhisper/owhisper-interface/src/: lib.rs  stream.rs
owhisper/owhisper-server/: Cargo.toml  Dockerfile  build.rs
owhisper/owhisper-server/logo/: ascii.txt  ascill.sh
owhisper/owhisper-server/src/: main.rs  misc.rs  server.rs
owhisper/src/: main.rs
owhisper/src/commands/: mod.rs  readme.rs  serve.rs
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/models/: download.sh  segmentation.onnx
src-tauri/src/: audio.rs  diarizer.rs  file.rs  lib.rs  llm.rs  main.rs  permissions.rs  segmentation.rs  stt.rs
(+2419 files in other folders)
