[workspace]
resolver = "2"
members = ["apps/app/server", "apps/desktop/src-tauri", "crates/*"]

[workspace.dependencies]
async-stream = "0.3.6"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
reqwest = "0.12"
tauri = "2.1.1"
tokio = "1"
tokio-stream = "0.1.17"

anyhow = "1"
approx = "0.5.1"
bytes = "1.9.0"
chrono = "0.4.39"
codes-iso-639 = "0.1.5"
dotenv = "0.15.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
indoc = "2"
itertools = "0.14.0"
schemars = "=1.0.0-alpha.17"
sentry = "0.35.0"
serde = "1"
serde_bytes = "0.11.15"
serde_json = "1"
serial_test = "3"
strum = "0.26"
tempfile = "3"
testcontainers-modules = "0.11.5"
thiserror = "2"
time = "0.3.37"
url = "2"
uuid = "1"

markdown = { git = "https://github.com/wooorm/markdown-rs.git", rev = "5c9eba146f06b2e0531a901cb586c0a877edb3ea" }
mdast_util_to_markdown = { git = "https://github.com/wooorm/markdown-rs.git", rev = "5c9eba146f06b2e0531a901cb586c0a877edb3ea" }

tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"

apalis = "0.6.4"
apalis-cron = "0.6.4"
apalis-sql = "0.6.4"

specta = "2.0.0-rc.20"
specta-typescript = "0.0.7"
specta-util = "0.0.7"
tauri-specta = "2.0.0-rc.20"

cpal = "0.15.3"
dasp = "0.11.0"
hound = "3.5.1"
rodio = "0.20.1"

[patch.crates-io]
# This includes a currently-unreleased fix that ensures the audio stream is actually stopped and released on drop on macOS.
cpal = { git = "https://github.com/RustAudio/cpal", rev = "f43d36e55494993bbbde3299af0c53e5cdf4d4cf" }
