[workspace]
resolver = "2"
members = ["apps/app/server", "apps/desktop/src-tauri", "apps/mobile/src-tauri", "crates/*", "plugins/*"]

[workspace.dependencies]
tauri = "2"
tauri-build = "2"
tauri-plugin = "2"

async-stream = "0.3.6"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
reqwest = "0.12"
tokio = "1"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.0"

anyhow = "1"
approx = "0.5.1"
bytes = "1.9.0"
codes-iso-639 = "0.1.5"
derive_more = "2"
dirs = "6.0.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
itertools = "0.14.0"
once_cell = "1.20.3"
schemars = "0.8.21"
serde = "1"
serde_bytes = "0.11.15"
serde_json = "1"
serde_qs = "0.14.0"
serial_test = "3"
strum = "0.26"
tempfile = "3"
testcontainers-modules = "0.11.5"
thiserror = "2"
uuid = "1"

axum = "0.8.1"
tower = "0.5.2"
tower-http = "0.6.2"

chrono = "0.4.39"
chrono-tz = "0.10.1"
url = "2"

prost = "0.13.4"
tonic = "0.12.3"
tonic-build = "0.12.3"

async-openai = { git = "https://github.com/fastrepl/async-openai", rev = "6404d307f3f706e818ad91544dc82fac5c545aee", default-features = false }
async-stripe = { version = "0.39.1", default-features = false }
graph-rs-sdk = "2.0.3"

sentry = "0.36.0"
sentry-rust-minidump = "0.10.0"

markdown = { git = "https://github.com/wooorm/markdown-rs.git", rev = "5c9eba146f06b2e0531a901cb586c0a877edb3ea" }
mdast_util_to_markdown = { git = "https://github.com/wooorm/markdown-rs.git", rev = "5c9eba146f06b2e0531a901cb586c0a877edb3ea" }
minijinja = "2.7.0"
minijinja-contrib = "2.7.0"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

apalis = "0.6.4"
apalis-cron = "0.6.4"
apalis-sql = "0.6.4"

specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"
tauri-specta = "2.0.0-rc.21"

cpal = "0.15.3"
dasp = "0.11.0"
hound = "3.5.1"
rodio = "0.20.1"

kalosm-common = { git = "https://github.com/floneum/floneum", rev = "464bfed472ea500ed5411fb2233fca401b57220a" }
kalosm-llama = { git = "https://github.com/floneum/floneum", rev = "464bfed472ea500ed5411fb2233fca401b57220a" }
kalosm-model-types = { git = "https://github.com/floneum/floneum", rev = "464bfed472ea500ed5411fb2233fca401b57220a" }
kalosm-sound = { git = "https://github.com/floneum/floneum", rev = "464bfed472ea500ed5411fb2233fca401b57220a", default-features = false }
kalosm-streams = { git = "https://github.com/floneum/floneum", rev = "464bfed472ea500ed5411fb2233fca401b57220a" }
rwhisper = { git = "https://github.com/floneum/floneum", rev = "464bfed472ea500ed5411fb2233fca401b57220a" }

libsql = "0.6.0"

[patch.crates-io]
# This includes a currently-unreleased fix that ensures the audio stream is actually stopped and released on drop on macOS.
cpal = { git = "https://github.com/RustAudio/cpal", rev = "f43d36e55494993bbbde3299af0c53e5cdf4d4cf" }
