[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["yujonglee <yujonglee.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
lago-python-client = "^1.16.1"
python-dotenv = "^1.0.1"
modal = "^0.72.51"
fastapi = "^0.115.7"
pydantic = "^2.10.6"
reactivex = "^4.0.4"
axiom-py = "^0.8.1"
structlog = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
