[package]
name = "owhisper"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-transcribe-aws = { workspace = true }
hypr-transcribe-azure = { workspace = true }
hypr-transcribe-gcp = { workspace = true }

axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
tracing = { workspace = true }

anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
colored = "3.0.0"
config = "0.15.13"
open = "5.3.2"
