[package]
name = "Hypr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fastnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-keygen-rs2 = "0.2.3"

specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy_macro = "0.15.7"

flume = "0.11.1"
objc = "0.2.7"
hound = "3.5.1"
whisper-rs = "0.13.2"
ort = "1.16.3"
cpal = { git = "https://github.com/RustAudio/cpal", rev = "f43d36e55494993bbbde3299af0c53e5cdf4d4cf" }
cap-media = { git = "https://github.com/CapSoftware/Cap", branch = "main" }
rodio = "0.20.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
