[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-transcribe-aws = { workspace = true }
hypr-transcribe-azure = { workspace = true }
hypr-transcribe-gcp = { workspace = true }

axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
