[package]
name = "restate"
version = "0.1.0"
edition = "2021"

[dependencies]
restate-sdk = { git = "https://github.com/restatedev/sdk-rust", rev = "85c6c71" }

hypr-db-admin = { workspace = true }
hypr-db-core = { workspace = true }
hypr-db-user = { workspace = true }
hypr-nango = { workspace = true }
hypr-turso = { workspace = true }

serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
