[package]
name = "restate"
version = "0.1.0"
edition = "2021"

[dependencies]
restate-sdk = { git = "https://github.com/restatedev/sdk-rust", tag = "v0.6.0" }

hypr-db-admin = { workspace = true }
hypr-db-core = { workspace = true }
hypr-db-user = { workspace = true }
hypr-loops = { workspace = true }
hypr-nango = { workspace = true }

serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }

async-stripe = { workspace = true, default-features = false, features = ["runtime-tokio-hyper", "webhook-events", "checkout", "connect"] }
