[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-bridge = { path = "../../crates/bridge", package = "bridge" }
hypr-db-server = { path = "../../crates/db-server", package = "db-server" }
hypr-s3 = { path = "../../crates/s3", package = "s3" }

shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
shuttle-posthog = { path = "../../crates/shuttle-posthog" }
shuttle-clerk = { path = "../../crates/shuttle-clerk" }
shuttle-stt = { path = "../../crates/shuttle-stt" }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

axum = { version = "0.7.4", features = ["ws", "multipart"] }
tower-http = { version = "0.6.2", features = ["fs", "timeout"] }
async-openai = { version = "0.26.0", default-features = false }
sentry = { workspace = true }
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "macros",
] }

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["preserve_order"] }

async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper"] }
