[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-s3 = { path = "../../crates/s3", package = "s3" }
hypr-stt = { path = "../../crates/stt", package = "stt" }
hypr-bridge = { path = "../../crates/bridge", package = "bridge" }
hypr-analytics = { path = "../../crates/analytics", package = "analytics" }
hypr-calendar = { path = "../../crates/calendar", package = "calendar", default-features = false, features = [
  "google",
] }
hypr-db = { path = "../../crates/db", package = "db", default-features = false, features = [
  "admin",
] }

shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
axum = { version = "0.7.4", features = ["ws", "multipart"] }
tower-http = { version = "0.6.2", features = ["fs", "timeout"] }
tower = "0.5.2"

async-openai = { version = "0.26.0", default-features = false }
sentry = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["preserve_order"] }

async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper"] }
clerk-rs = { version = "0.4.0", features = ["axum"] }
