[package]
name = "aec"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-onnx = { path = "../onnx", package = "onnx" }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
ndarray = { workspace = true }
ndrustfft = "0.5.0"

[dev-dependencies]
hound = { workspace = true }
approx = { workspace = true }
