[package]
name = "aec"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-onnx = { path = "../onnx", package = "onnx" }

anyhow = { workspace = true }
ndarray = { workspace = true }
ndrustfft = "0.5.0"
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
approx = { workspace = true }
hound = { workspace = true }
