[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

futures-channel = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-stream = { workspace = true }

cpal = { workspace = true }
rodio = { workspace = true, features = ["vorbis"] }

kalosm-sound = { workspace = true, default-features = false }
ringbuf = "0.4.8"

[target.'cfg(target_os = "macos")'.dependencies.cidre]
git = "https://github.com/yury/cidre"
rev = "3f786684ef19186f02606b22d4dabdea1ee7a82b"
features = ["av"]

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = { git = "https://github.com/HEnquist/wasapi-rs", rev = "24ae99c0134f7e1429d79ba3105a4f796e92ee6d" }

[dev-dependencies]
rodio = "*"
serial_test = { workspace = true }
