[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

futures-channel = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

cpal = { workspace = true }
rodio = { workspace = true, features = ["vorbis"] }

ebur128 = "0.1.10"
kalosm-sound = { workspace = true, default-features = false }
ringbuf = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true, features = ["av"] }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.19.0"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9.1"

[dev-dependencies]
hound = { workspace = true }
hypr-data = { workspace = true }
rodio = { workspace = true }
serial_test = { workspace = true }
