[package]
name = "aws-transcribe"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

aws-sdk-transcribe = "1.83.0"
aws-sdk-transcribestreaming = "1.80.0"
