[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-audio = { path = "../../crates/audio", package = "audio" }
hypr-db = { path = "../../crates/db", package = "db", features = ["user"] }

anyhow = { workspace = true }
thiserror = { workspace = true }

bytes = { workspace = true }
codes-iso-639 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive"] }
url = { workspace = true }

async-stream = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26.0", features = ["native-tls-vendored"] }

[dev-dependencies]
futures-channel = { workspace = true }
hypr-audio = { path = "../../crates/audio", package = "audio" }
