[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-audio = { path = "../../crates/audio", package = "audio" }
hypr-db = { path = "../../crates/db", package = "db", features = ["user"] }
hypr-stt = { path = "../../crates/stt", package = "stt", features = ["realtime"] }

anyhow = { workspace = true }
thiserror = { workspace = true }

bytes = { workspace = true }
codes-iso-639 = { workspace = true }
url = { workspace = true }

intervaltree = "0.2.7"
ordered-float = "4.6.0"

serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }

schemars = { workspace = true }
specta = { workspace = true, features = ["derive"] }

async-stream = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { workspace = true, features = ["native-tls-vendored"] }

[dev-dependencies]
hypr-audio = { path = "../../crates/audio", package = "audio" }
hypr-data = { path = "../../crates/data", package = "data" }

async-stream = { workspace = true }
futures-channel = { workspace = true }
hound = { workspace = true }
