[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-db-user = { path = "../../crates/db-user", package = "db-user" }
hypr-ws = { path = "../../crates/ws", package = "ws", features = ["server"] }

anyhow = { workspace = true }
thiserror = { workspace = true }

bytes = { workspace = true }
codes-iso-639 = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }

schemars = { workspace = true }
specta = { workspace = true, features = ["derive"] }

futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
hypr-audio = { path = "../../crates/audio", package = "audio" }
hypr-data = { path = "../../crates/data", package = "data" }

async-stream = { workspace = true }
futures-channel = { workspace = true }
hound = { workspace = true }
