[package]
name = "calendar-apple"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-calendar-interface = { path = "../calendar-interface", package = "calendar-interface" }

block2 = "0.5.1"
objc2 = "0.5.2"
objc2-contacts = { version = "0.2.2", features = ["CNContactStore", "CNLabeledValue", "CNContact", "block2"] }
objc2-event-kit = { version = "0.2.2", features = ["EKEventStore", "EKCalendarItem", "EKCalendar", "EKParticipant", "EKObject", "EKEvent", "EKSource", "EKTypes", "block2"] }
objc2-foundation = { version = "0.2.2", features = ["NSEnumerator"] }

chrono = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
