[package]
name = "calendar"
version = "0.1.0"
edition = "2021"

[features]
default = []
apple = []
google = []
outlook = []

[dependencies]
hypr-calendar-interface = { path = "../calendar-interface", package = "calendar-interface" }

anyhow = { workspace = true }
thiserror = { workspace = true }

chrono = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

google-calendar = "0.7.0"
graph-rs-sdk = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5.1"
objc2 = "0.5.2"
objc2-event-kit = { version = "0.2.2", features = ["EKEventStore", "EKCalendarItem", "EKCalendar", "EKParticipant", "EKObject", "EKEvent", "EKTypes", "block2"] }
objc2-contacts = { version = "0.2.2", features = ["CNContactStore", "CNLabeledValue", "CNContact", "block2"] }
objc2-foundation = { version = "0.2.2", features = ["NSEnumerator"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
