[package]
name = "chunker"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
hound = { workspace = true }
hypr-data = { workspace = true }

[dependencies]
hypr-vad = { workspace = true }
kalosm-sound = { workspace = true, default-features = false }
rodio = { workspace = true, features = ["wav"] }

futures-util = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
load-dynamic = ["hypr-vad/load-dynamic"]
