[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-db = { path = "../db", package = "db", features = ["user", "admin"] }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

clap = { version = "4", features = ["derive", "env"] }
