[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-db = { path = "../db", package = "db" }
hypr-proto = { path = "../proto", package = "proto" }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

url = "2"
reqwest = { version = "0.12.9", features = ["json"] }
tokio-tungstenite = { version = "0.26.0", features = ["native-tls-vendored"] }
futures-util = "0.3.31"
