[package]
name = "clova"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.12.3"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

futures-core = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }

prost = "0.13.4"
tonic = { version = "0.12.3", features = ["channel", "tls-native-roots"] }

reqwest = { workspace = true, features = ["json"] }
url = { workspace = true }
