[package]
name = "db-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-db-core = { path = "../db-core", package = "db-core" }

hypr-calendar = { path = "../calendar", package = "calendar", default-features = false }
hypr-nango = { path = "../nango", package = "nango" }

async-stripe = { workspace = true, default-features = false, features = ["runtime-tokio-hyper"] }
libsql = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }

schemars = { workspace = true, features = ["chrono"] }
specta = { workspace = true, features = ["derive", "chrono", "serde_json"] }

chrono = { workspace = true }
codes-iso-639 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
