[package]
name = "db-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
sqlx = { workspace = true, features = [
  "sqlite",
  "migrate",
  "time",
  "uuid",
  "json",
  "runtime-tokio",
] }

specta = { workspace = true, features = ["derive", "time", "uuid"] }
specta-typescript = { workspace = true }
specta-util = { workspace = true }
