[package]
name = "db-script"
version = "0.1.0"
edition = "2021"

[dependencies]
libsql = { workspace = true }
owhisper-interface = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
hypr-data = { workspace = true }
hypr-db-core = { workspace = true }

tokio = { workspace = true, features = ["macros"] }
