[package]
name = "db-user"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-calendar = { path = "../calendar", package = "calendar", default-features = false }
hypr-db-core = { path = "../db-core", package = "db-core" }

libsql = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }

schemars = { workspace = true, features = ["chrono"] }
specta = { workspace = true, features = ["derive", "chrono", "serde_json"] }

chrono = { workspace = true }
codes-iso-639 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
