[package]
name = "db-user"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-buffer = { workspace = true }
hypr-calendar-interface = { workspace = true }
hypr-data = { workspace = true }
hypr-db-core = { workspace = true }
hypr-db-script = { workspace = true }
hypr-language = { workspace = true }
hypr-listener-interface = { workspace = true }

libsql = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }

schemars = { workspace = true, features = ["chrono"] }
specta = { workspace = true, features = ["derive", "chrono", "serde_json"] }

chrono = { workspace = true, features = ["serde"] }
codes-iso-639 = { workspace = true }
indoc = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
